--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="/friendLink/1">友人帐</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/entertainment">娱乐</a>
+                        <a class="nav-link" href="/entertainment/1">娱乐</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/user/login">个人</a>
@@ -73,7 +73,7 @@
                 <a href="/friendLink/1">友人帐</a>
             </li>
             <li class="">
-                <a href="/entertainment">娱乐</a>
+                <a href="/entertainment/1">娱乐</a>
             </li>
             <li class="">
                 <a href="/user/login">个人</a>
