--- a/src/main/resources/templates/friend_link.html
+++ b/src/main/resources/templates/friend_link.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN" class="nivo-lightbox-notouch" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>友情链接 | 小虚无的下午茶</title>
+    <title>友人帐 | 小虚无的下午茶</title>
     <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/static/css/font-awesome.min.css}">
     <link rel="stylesheet" th:href="@{/static/css/slicknav.css}">
@@ -15,7 +15,6 @@
 <body>
 
 <header id="header-wrap">
-    <!-- 导航栏开始 -->
     <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo top-nav-collapse">
         <div class="container">
             <div class="navbar-header">
@@ -47,7 +46,7 @@
                         <a class="nav-link" href="/friendLink/1">友人帐</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/entertainment">娱乐</a>
+                        <a class="nav-link" href="/entertainment/1">娱乐</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/user/login">个人</a>
@@ -72,7 +71,7 @@
                 <a href="/friendLink/1">友人帐</a>
             </li>
             <li class="">
-                <a href="/entertainment">娱乐</a>
+                <a href="/entertainment/1">娱乐</a>
             </li>
             <li class="">
                 <a href="/user/login">个人</a>
@@ -95,23 +94,22 @@
             </div>
         </div>
     </div>
-
 </header>
 
-<section id="article" class="article section-padding">
+<section id="friendLink" class="friendLink section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-lg-3 col-xs-12" th:each="item:${friendLink}">
-                <div class="article-item wow fadeInDown animated" data-wow-delay="0.3s"
+                <div class="friendLink-item wow fadeInDown animated" data-wow-delay="0.3s"
                      style="visibility: visible;-webkit-animation-delay: 0.3s; -moz-animation-delay: 0.3s; animation-delay: 0.3s;">
                     <div class="icon">
                         <i class="icon-grid"></i>
                     </div>
-                    <div class="article-content">
+                    <div class="friendLink-content">
                         <h3>
                             <p th:text="${item.friend_link_user}"></p>
                         </h3>
-                        <a th:text="${item.friend_link_url}">
+                        <a target="_blank" th:href="${item.friend_link_url}">
                             <p th:text="${item.friend_link_url}"></p>
                         </a>
                     </div>
