--- a/src/main/resources/templates/header_home.html
+++ b/src/main/resources/templates/header_home.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="/friendLink/1">友人帐</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/entertainment">娱乐</a>
+                    <a class="nav-link" href="/entertainment/1">娱乐</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">登出</a>
@@ -54,7 +54,7 @@
             <a href="/friendLink/1">友人帐</a>
         </li>
         <li class="">
-            <a href="/entertainment">娱乐</a>
+            <a href="/entertainment/1">娱乐</a>
         </li>
         <li class="">
             <a href="/logout">登出</a>
