--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="/friendLink/1">友人帐</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/entertainment">娱乐</a>
+                        <a class="nav-link" href="/entertainment/1">娱乐</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/user/login">个人</a>
@@ -76,7 +76,7 @@
                 <a href="/friendLink/1">友人帐</a>
             </li>
             <li class="">
-                <a href="/entertainment">娱乐</a>
+                <a href="/entertainment/1">娱乐</a>
             </li>
             <li class="">
                 <a href="/user/login">个人</a>
@@ -232,7 +232,7 @@
                     </div>
                     <div class="article-content">
                         <h3>
-                            <a href=""><p th:text="${item.article_title}"></p></a>
+                            <a th:href="'/article/title/'+ ${item.article_private_id}" ><p th:text="${item.article_title}"></p></a>
                         </h3>
                         <p th:text="${item.article_author}"></p>
                         <p th:text="${item.article_time}"></p>
