（1）更新文章编辑界面及后台（2）更新后台操作js、HTML

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -44,7 +44,7 @@
                            style="color: #000000">查询数据</a>
                     </li>
                     <li class="user-li-style">
-                        <a href="/articleTest" style="color: #000000">写文章</a>
+                        <a href="/articleEdit" style="color: #000000">写文章</a>
                     </li>
                     <li class="user-li-style">
                         <a href="#admin-settings" data-toggle="tab" style="color: #000000">设置</a>
@@ -128,7 +128,6 @@
         </div>
     </div>
 </div>
-
 <!--遮罩层-->
 <div id="more-info-dialog-background" class="more-info-dialog-background">
 </div>
@@ -144,9 +143,6 @@
 </div>
 <script type="text/javascript" th:src="@{/static/js/jquery-min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/admin.js}"></script>
-<script type="text/javascript" th:src="@{/static/editor.md/lib/editormd.min.js}"></script>
-<script type="text/javascript" th:src="@{/static/editor.md/lib/marked.min.js}"></script>
-<script type="text/javascript" th:src="@{/static/editor.md/lib/prettify.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/popper.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/jquery.mixitup.js}"></script>
